:bug: - Navigation-bar z-index.

--- a/rijkshuisstijl/sass/components/navigation-bar/_navigation-bar.scss
+++ b/rijkshuisstijl/sass/components/navigation-bar/_navigation-bar.scss
@@ -98,12 +98,11 @@
     @include container--big(false);
     flex-wrap: wrap;
     position: relative;
-    z-index: 10;
+    z-index: 10000;
 
     &--sticky {
       position: sticky;
       top: 0;
-      z-index: 1000;
     }
 
     .login-bar {
